# moding_code

./: .gitignore
ULP/: ULP流程图.docx  Ulp低功耗.xlsx  Ulp低功耗流程图.xlsx  低功耗ULP-许工(1).xlsx  低功耗ULP.xlsx  低功耗以及基站功能原型需求.xlsx
ULP/ulp_pull_framework/ulp_adc_pull_framework/: .cproject  .project  CMakeLists.txt  README.md  sdkconfig  sdkconfig.old  低功耗ULP-许工(2).xlsx
ULP/ulp_pull_framework/ulp_adc_pull_framework/main/: CMakeLists.txt  bleinit.c  spiff.c  timer.c  ulp_adc_example_main.c
ULP/ulp_pull_framework/ulp_adc_pull_framework/main/include/: spiff.h  timer.h
ULP/ulp_pull_framework/ulp_adc_pull_framework/main/ulp/: i2c.S  i2c_mpu.S  main.S
ULP/ulp_v3/ulp_adc/: .cproject  .project  sdkconfig  sdkconfig.old
ULP/ulp_v3/ulp_adc/main/: CMakeLists.txt  readme  time.c  ulp_adc_example_main.c
ULP/ulp_v3/ulp_adc/main/include/: bleinit.h
ULP/ulp_v3/ulp_adc/main/ulp/: i2c-util.S  i2c.S  main.S  stack.S
pull_ring/: .cproject  .project  readme.txt  指令.txt  问题说明.txt
pull_ring/main/: CMakeLists.txt  display_pic.c  epd.c  gatts_server.c  http_client.c  main.c  moding_deep_sleep.c  ncolor_v2.c  time.c
pull_ring/main/include/: display_pic.h  gatts_server.h  http_client.h  pic_ncolor.h  spiff.h
taili-75_latest/: .project  CMakeLists.txt  esp32功能说明.xlsx  partitions_example.csv  readme.txt  sdkconfig
taili-75_latest/main/: calendar.c  gatts_server.c  http_client.c  main.c  screen_75_driver.c  time.c  wifi.c
taili-75_latest/main/include/: calendar.h  common.h  http_client.h  wifi.h
taili102/main/: CMakeLists.txt  epd.c  http_client.c  ncolor.c  time.c  wifi.c
taili102/main/include/: aenc.h  common.h  pic.h
taili_102/: .cproject  readme.txt  sdkconfig  sdkconfig.old
taili_102/main/: CMakeLists.txt  calendar.c  data_flash.c  epd.c  gatts_server.c  http_client.c  main.c  spiffs.c  time.c  wifi.c
taili_102/main/include/: calendar.h  common.h  data_flash.h  gatts_server.h  http_client.h  pic.h  spiff.h  time.h
